--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="%3A%2F%2Fwww.pixelstalk.net%2Fwp-content%2Fuploads%2F2016%2F06%2FCool-HD-Photos-For-Girls.jpg&f=1&nofb=1" style="width:100%">
+      <img src="https://lh3.googleusercontent.com/8UH0Pb0XTM-4baby_OTSaNfqottN40tDqv-5ISZf8Ce-jWEy21I1yIZqtsQu2KA3JR_6Y-9MQNjHmOEOxqGEJUDKwBrb3Xsd6UXU_RyYVwu1Gvy5I2EYZlCuyjh1v7iunmrJ-cXoq8ZLRUyM3Me4YOn-sZBG8yhhpzLy0nSsUc1ZZYRfm3-SnHgJdFygrS2C8_IRmFFXdY2hECAag_3_iCjJX4z0X3r0MFSKE52hq2uWNjdW4HVAOk2y3viggFXJRC4wjyVYPKKIZmrZHcO52fw2Jkl2znaRo7vni_Spm7JCxicbeKHOGybaAQIJXOtj1tqJ3S_KIlxASzGzlcIacFTQEgep82qXrE9ckOxdjKUysrgC-nnJTDGIRFeugAfPjSrRNYlmOMrmBfkNE_AQoKk2sG06FMRevzjhhHpodXcY7W5tm-ApmsMYDy4NN67W2dO15oMTs-Ze2XwOzHyDd_5jiejCUJ976q-ZqyFVf5B9iP7HuoxIWLjybggaKhu_44FrNTq6iEa2rf3ja1vWGOZw-QVb_3yQKmESoYvWtNoWLgaeaB94ZXAwo1-lTbFSptS0PKz1Ryv_PR5hgcq7_iqF_70I4oVWAVBP6YNLfm9PypqMLHkQm_m5Uk2sDEyTDFS_MQT23jaE3l631CdT4UAjzYtMNmsoRlsLAyKcQI5YHpb9bklHQ6mIHVCfO0kFwJmUF5v15AjjGOyZDACX1OW8=w1354-h1499-no?authuser=0" style="width:100%">
       <div class="content">
         <h2>Leena Dany</h2>
         <p class="title">Prograd Junior and grade 9.</p>
