--- a/vaccine.html
+++ b/vaccine.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vaccination</title>
     <link rel="stylesheet" href="./css/vaccine.css">
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/start.css">
@@ -129,7 +129,7 @@
                 <h2>Donate</h2>
                 <p>Donate and help people who need support in these times.</p>
                 <img src="./assets/frontliner.png" alt="">
-                <a href="#"><button>Donate <i class="fas fa-angle-right"></i></button></a>
+                <a href="./donate.html"><button>Donate <i class="fas fa-angle-right"></i></button></a>
             </div>
         </div>
     </div>
