--- a/solution.html
+++ b/solution.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Solution</title>
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/solution.css">
     <link rel="stylesheet" href="./css/start.css">
