--- a/vaccine.html
+++ b/vaccine.html
@@ -123,7 +123,7 @@
                 <h3>Book for you vaccines now!</h3>
                 <p>To book your vaccines for covid-19, click on the button below.</p>
                 <img src="./assets/vaccine/vaccine2.png" alt="">
-                <a class="a" href="https://www.cowin.gov.in/home"><button>Book now <i class="fas fa-angle-right"></i></button></a>
+                <a class="a" target="_blank" href="https://www.cowin.gov.in/home"><button>Book now <i class="fas fa-angle-right"></i></button></a>
             </div>
             <div class="random">
                 <h2>Donate</h2>
