--- a/about.html
+++ b/about.html
@@ -56,66 +56,46 @@
 <!-- END OF NAV -->
 
 
-<div class="about-section">
-  <h1>About the creators</h1>
-<p style="text-align:center">We are a team of 3 Prograd Juniors....</p>
+<div class="start">
+  <div class="start-c">
+      <h2>About the Developers</h2>
+      <p> A team of 3 who are Prograd Juniors!
+      </p>
+      <div class="btns">
+          <a target="_blank" href="https://www.worldometers.info/coronavirus/"><button>Statistics<i class="fas fa-angle-right"></i></button></a>
+          <a href="./vaccine.html"><button id="don">Vaccine<i class="fas fa-angle-right"></i></button></a>
+      </div>
+  </div>
   <img src="./assets/coder.png" alt="">
 </div>
 
-<h2 style="text-align:center">Our Team</h2>
-<div class="row">
-  <div class="column">
-    <div class="card">
-      <img src="https://lh3.googleusercontent.com/8UH0Pb0XTM-4baby_OTSaNfqottN40tDqv-5ISZf8Ce-jWEy21I1yIZqtsQu2KA3JR_6Y-9MQNjHmOEOxqGEJUDKwBrb3Xsd6UXU_RyYVwu1Gvy5I2EYZlCuyjh1v7iunmrJ-cXoq8ZLRUyM3Me4YOn-sZBG8yhhpzLy0nSsUc1ZZYRfm3-SnHgJdFygrS2C8_IRmFFXdY2hECAag_3_iCjJX4z0X3r0MFSKE52hq2uWNjdW4HVAOk2y3viggFXJRC4wjyVYPKKIZmrZHcO52fw2Jkl2znaRo7vni_Spm7JCxicbeKHOGybaAQIJXOtj1tqJ3S_KIlxASzGzlcIacFTQEgep82qXrE9ckOxdjKUysrgC-nnJTDGIRFeugAfPjSrRNYlmOMrmBfkNE_AQoKk2sG06FMRevzjhhHpodXcY7W5tm-ApmsMYDy4NN67W2dO15oMTs-Ze2XwOzHyDd_5jiejCUJ976q-ZqyFVf5B9iP7HuoxIWLjybggaKhu_44FrNTq6iEa2rf3ja1vWGOZw-QVb_3yQKmESoYvWtNoWLgaeaB94ZXAwo1-lTbFSptS0PKz1Ryv_PR5hgcq7_iqF_70I4oVWAVBP6YNLfm9PypqMLHkQm_m5Uk2sDEyTDFS_MQT23jaE3l631CdT4UAjzYtMNmsoRlsLAyKcQI5YHpb9bklHQ6mIHVCfO0kFwJmUF5v15AjjGOyZDACX1OW8=w1354-h1499-no?authuser=0" style="width:100%">
-      <div class="content">
-        <h2>Leena Dany</h2>
-        <p class="title">Prograd Junior and grade 9.</p>
-        <p><button id="button1" class="button">Contact</button></p>
-      </div>
-    </div>
-  </div>
 
-  <div class="column">
-    <div class="card">
-      <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallup.net%2Fwp-content%2Fuploads%2F2018%2F03%2F23%2F566310-sky-landscape-road-sunset.jpg&f=1&nofb=1" style="width:100%">
-      <div class="content">
-        <h2>Tanve Sribharath</h2>
-        <p class="title">Prograd Junior and grade 7.</p>
-        <p><button id="button2" class="button">Contact</button></p>
-      </div>
+<div class="prf">
+  <div class="cards prf1">
+    <div class="pic"></div>
+    <img src="./assets/trangle.png" alt="">
+    <div class="cont">
+      <h2>Leena Abigail Dany</h2>
+      <p>Prograd Junior and in grade 9</p>
     </div>
   </div>
-  
-  <div class="column">
-    <div class="card">
-      <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.diamondpet.com%2Fwp-content%2Fuploads%2F2019%2F10%2F394-1951-Black-Cat-Bad-Rap-1200x630.jpg&f=1&nofb=1" style="width:100%">
-      <div class="content">
-        <h2>Anagha Neelacantan</h2>
-        <p class="title">Prograd Junior and grade 8.</p>
-        <p><button id="button3" class="button">Contact</button></p>
-      </div>
+  <div class="cards prf2">
+    <div class="pic"></div>
+    <img src="./assets/trangle.png" alt="">
+    <div class="cont">
+      <h2>Anagha Neelacantan</h2>
+      <p>Prograd Junior and in grade 8</p>
+    </div>
+  </div>
+  <div class="cards prf3">
+    <div class="pic"></div>
+    <img src="./assets/trangle.png" alt="">
+    <div class="cont">
+      <h2>Tanve Sribharath</h2>
+      <p>Prograd Junior and in grade 6</p>
     </div>
   </div>
 </div>
 
 </body>
-	<script>
-    var button1= document.getElementById("button1");
-button1.onclick = newTabs;
-function newTabs(){
-    window.open("https://linktr.ee/leenaaanna")
-}
-
-var button2= document.getElementById("button2");
-button2.onclick = newTabed;
-function newTabed(){
-    window.open("https://linktr.ee/lucky1809")
-}
-
-var button3= document.getElementById("button3");
-button3.onclick = newTab;
-function newTab(){
-    window.open("https://linktr.ee/Anagha_N")
-}
-</script>
 </html>
