--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="about.css">
+<link rel="stylesheet" href="./about.css">
 <script src="./app.js"></script>
 <link rel="stylesheet" href="./css/nav.css">
 <link rel="stylesheet" href="./css/start.css">
