--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                 <a href="./vaccine.html"><li>Vaccines</li></a>
                 <a href="./frontline.html"><li>Frontliners</li></a>
                 <a href="./donate.html"><li>Donate</li></a>
-                <a href=""><li>About</li></a>
+                <a href="./about.html"><li>About</li></a>
             </ul>
         </div>  
     </div>
