--- a/solution.html
+++ b/solution.html
@@ -135,6 +135,27 @@
             </p>
          </div>
     </div>
+    
+    <h2 class="vidc">Physical Exercises</h2>
+    <div class="videos">
+        <iframe src="https://www.youtube.com/embed/Yzm3fA2HhkQ" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+        <iframe src="https://www.youtube.com/embed/6WUFIwk9Owc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+    </div>
+    <h2 class="vidc">Breathing Exercises</h2> <br>
+    <div class="videos">
+        <iframe src="https://www.youtube.com/embed/VT3QAHsvekw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+        <iframe src="https://www.youtube.com/embed/cMfChJLqma4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+    </div>
+    <div class="videos" style="margin-top: -10%;">
+        <iframe src="https://www.youtube.com/embed/P9LQic302hg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+        <iframe src="https://www.youtube.com/embed/y9YYwuMOp0k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+    </div>
 
     <div class="foot">
         <h3>Want to know who made this?</h3>
